Restructure menu bar

--- a/index.html
+++ b/index.html
@@ -275,6 +275,35 @@ div.tocify {
     <li>
       <a href="Reference.html">Reference Scenario</a>
     </li>
+    <li class="divider"></li>
+    <li class="dropdown-header">Broken Bridge Scenario</li>
+    <li>
+      <a href="Bridge_1yr.html">One-year Bridge</a>
+    </li>
+    <li>
+      <a href="Bridge_2yr.html">Two-year Bridge</a>
+    </li>
+    <li class="divider"></li>
+    <li class="dropdown-header">Alternate Economic Futures</li>
+    <li>
+      <a href="Optimistic.html">Optimistic</a>
+    </li>
+    <li>
+      <a href="Pessimistic.html">Pessimistic</a>
+    </li>
+    <li class="divider"></li>
+    <li class="dropdown-header">Multifamily Development</li>
+    <li>
+      <a href="Multifamily.html">Multifamily</a>
+    </li>
+    <li class="divider"></li>
+    <li class="dropdown-header">Tolling</li>
+    <li>
+      <a href="salem_tolls.html">Tolls on I-5 between Salem and Portland</a>
+    </li>
+    <li>
+      <a href="columbia_tolls.html">Tolls on I-5 across Columbia River</a>
+    </li>
   </ul>
 </li>
       </ul>
